style.css
* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
  text-decoration: none;
  list-style: none;
}

body {
  font-family: "Inter", sans-serif;
}

:root {
  --default-white-color: #fff;
  --default-black-color: #000;
  --primary-color: #f59e0b;
  --color-red-500: #fb2c36;
  --color-gray-100: #f3f4f6;
  --color-gray-200: #e5e7eb;
  --color-gray-300: #d1d5dc;
  --color-gray-400: #99a1af;
  --color-gray-700: #364153;
  --color-gray-900: #101828;
}

nav {
  display: flex;
  justify-content: space-around;
  align-items: center;
  padding: 20px;
  position: sticky;
  box-shadow: 1px 0px 4px 5px var(--color-gray-200);
}

nav .ls {
  display: flex;
  align-items: center;
  gap: 30px;
}

nav .ls .logo a {
  color: var(--color-gray-900);
}

nav .ls .logo {
  font-size: 1.5rem;
  text-transform: uppercase;
}

nav .ls .logo .c-logo {
  color: var(--primary-color);
}

nav .ls .contact a {
  color: var(--color-gray-700);
  padding: 8px 16px;
  font-size: 14px;
  border-radius: 30px;
}

nav .ls .contact a:hover {
  background-color: var(--color-gray-300);
}

nav .rs {
  display: flex;
  align-items: center;
  gap: 20px;
}

.search i {
  padding: 15px;
  border-radius: 30px;
  border: 1px solid var(--color-gray-400);
  border-top-right-radius: 0px;
  border-bottom-right-radius: 0px;
  border-right: none;
}

.search input {
  padding: 8px;
  width: 300px;
  border-radius: 30px;
  border: 1px solid var(--color-gray-400);
  border-top-left-radius: 0px;
  border-bottom-left-radius: 0px;
  border-left: none;
}

nav .cart span {
  padding: 10px;
  border-radius: 50%;
}

nav .cart:hover {
  cursor: pointer;
  background-color: var(--color-gray-100);
  border-radius: 50%;
}

nav .sign-btns {
  display: flex;
  gap: 20px;
}

nav .sign-btns a {
  color: var(--default-black-color);
}

nav .sign-btns .sign-in:hover {
  color: var(--primary-color);
}

nav .sign-btns .sign-up {
  background-color: var(--primary-color);
  padding: 10px;
  border-radius: 30px;
}

section {
  padding: 4rem 0;
}

section .container {
  width: 1200px;
  margin: auto;
}

section .container .top-side {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 20px;
}

section .container .top-side h1 {
  font-size: 3rem;
  color: var(--primary-color);
}

section .container .top-side p {
  width: 430.66px;
  height: 49px;
  font-size: 1.125rem;
  line-height: 1.5em;
}

section .container .display {
  margin-top: 60px;
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  gap: 30px;
}

section .container .display .card {
  width: 408.66px;
  height: 540px;
  background-color: var(--default-white-color);
  border-radius: 30px;
  box-shadow: 1px 0px 4px 5px var(--color-gray-200);
}

section .container .display .card img {
  width: 408.66px;
  height: 408.66px;
  border-radius: 30px;
  border-bottom-left-radius: 0px;
  border-bottom-right-radius: 0px;
}

section .container .display .card .card-bs {
  display: flex;
  flex-direction: column;
  gap: 10px;
  padding: 16px;
  height: 132px;
}

section .container .display .card .card-bs .price {
  font-size: 18px;
}

section .container .display .card .card-bs .add-to-cart {
  background-color: var(--primary-color);
  border-radius: 12px;
  text-align: center;
  padding: 8px;
}

section .container .display .card .card-bs .add-to-cart a span {
  color: var(--default-black-color);
  font-size: 14px;
}

section
  .container
  .display
  .card
  .card-bs
  .add-to-cart
  a
  span
  .material-symbols-outlined {
  margin-right: 10px;
}

section.stay {
  padding: 48px 0px;
  text-align: center;
}

.stay .center {
  width: 672px;
  height: 132px;
  margin: 0 auto;
}

.stay .center h1 {
  font-size: 24px;
  color: var(--default-black-color);
  line-height: 4rem;
}

.stay .center p {
  color: var(--color-gray-400);
  line-height: 3.5rem;
}

.stay .center .e-mail {
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 10px;
}

.stay .center .e-mail input {
  width: 392px;
  height: 36px;
  padding: 4px 12px;
  border-radius: 30px;
  border: 1px solid var(--color-gray-400);
  box-shadow: 0px 1px 7px 2px var(--color-gray-200);
}

.stay .center .e-mail input:focus {
  outline: 1px solid var(--primary-color);
}

.stay .center .e-mail span {
  background-color: var(--primary-color);
  width: 48px;
  height: 36px;
  padding: 8px 10px;
  border-radius: 30px;
}

.b-hr {
  width: 1472px;
  margin: auto;
}

footer {
  /* display: flex; */
  display: grid;
  grid-template-columns: repeat(5, 1fr);
  padding: 48px 0px;
  /* justify-content: center; */
  width: 1472px;
  margin: auto;
  text-align: left;
  color: var(--color-gray-400);
}

footer h3 {
  color: var(--color-gray-700);
}

footer .ls {
  width: 469.33px;
  height: 276px;
}

footer .ls p {
  width: 384px;
  height: 72px;
  margin-bottom: 24px;
}

footer .ls .logo a {
  color: var(--color-gray-900);
}

footer .ls .logo {
  font-size: 1.5rem;
  text-transform: uppercase;
  line-height: 40px;
}

footer .ls .logo .c-logo {
  color: var(--primary-color);
}

footer .ls span i {
  color: var(--primary-color);
}

footer .address,
footer .phone,
footer .mail {
  margin-bottom: 12px;
}

footer .address span,
footer .phone span,
footer .mail span {
  font-size: 14px;
}

footer .ls .socials {
  margin-top: 24px;
}

footer .ls .socials i {
  color: var(--color-gray-400);
}

footer .ls .socials span {
  background-color: var(--color-gray-200);
  padding: 5px;
  width: 40px;
  height: 40px;
  border-radius: 50%;
  margin-right: 20px;
}

footer .shop,
footer .customer,
footer .company,
footer .legal {
  width: 218.67px;
  line-height: 40px;
}

footer.footer {
  padding: 24px 0px;
  display: flex;
  justify-content: space-between;
  align-items: center;
  color: var(--color-gray-400);
}

footer.footer div span {
  color: var(--color-gray-700);
}

footer.footer ul {
  display: flex;
  gap: 6px;
}

